--- a/app/Resources/views/T42/T42.html.twig
+++ b/app/Resources/views/T42/T42.html.twig
@@ -3,8 +3,9 @@
 {% block title %}My cool blog posts{% endblock %}
 
 {% block body %}
-    {% for entry in blog_entries %}
-        <h2>{{ entry.title }}</h2>
-        <p>{{ entry.body }}</p>
-    {% endfor %}
+   {# {% for entry in blog_entries %} #}
+     {#   <h2>{{ entry.title }}</h2>#}
+        {#<p>{{ entry.body }}</p>#}
+   {#} {% endfor %}#}
+   <h2>Hola Mundo</h2>
 {% endblock %}
