--- a/app/Resources/views/T42/T42.html.twig
+++ b/app/Resources/views/T42/T42.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}My cool blog posts{% endblock %}
+{% block title %}Practica 42{% endblock %}
 
 {% block body %}
    {# {% for entry in blog_entries %} #}
