--- a/app/Resources/views/T42/T42.html.twig
+++ b/app/Resources/views/T42/T42.html.twig
@@ -1,11 +1,71 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Practica 42{% endblock %}
-
+{% block stylesheets %}
+{{ parent() }}
+<link href="{{ asset('https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css') }}" rel="stylesheet" />
+{% endblock %}
 {% block body %}
-   {# {% for entry in blog_entries %} #}
-     {#   <h2>{{ entry.title }}</h2>#}
-        {#<p>{{ entry.body }}</p>#}
-   {#} {% endfor %}#}
-   <h2>Hola Mundo</h2>
+	{% if page=="T42" %}
+    <ul>
+	<li><a href="/T42">Home</a></li>
+	<li><a href=" /T42/about">About</a></li>
+	<li><a href=" /T42/contact/">Contact</a></li>
+	
+	</ul>
+	
+	
+	
+ {% endif %}
+ {% if page=="about" %}
+ <body>
+ <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem iste sint optio minima aut
+ sed maiores nostrum cum molestiae labore voluptatem eligendi minus natus recusandae velit architecto
+  alias consequatur aliquid.</p>
+
+
+
+<ul>
+	<li><a href="/T42">Home</a></li>
+	<li><a href=" /T42/about">About</a></li>
+	<li><a href=" /T42/contact/">Contact</a></li>
+</ul>
+ </body>
+ {% endif %}
+ {% if page=="contact" %}
+ <body>
+        
+
+<form>
+  <div class="row">
+    <div class="six columns">
+      <label for="exampleEmailInput">Your email</label>
+      <input class="u-full-width" placeholder="test@mailbox.com" id="exampleEmailInput" type="email">
+    </div>
+    <div class="six columns">
+      <label for="exampleRecipientInput">Reason for contacting</label>
+      <select class="u-full-width" id="exampleRecipientInput">
+        <option value="Option 1">Questions</option>
+        <option value="Option 2">Admiration</option>
+        <option value="Option 3">Can I get your number?</option>
+      </select>
+    </div>
+  </div>
+  <label for="exampleMessage">Message</label>
+  <textarea class="u-full-width" placeholder="Hi Dave …" id="exampleMessage"></textarea>
+  <label class="example-send-yourself-copy">
+    <input type="checkbox">
+    <span class="label-body">Send a copy to yourself</span>
+  </label>
+  <input class="button-primary" value="Submit" type="submit">
+</form>	
+
+
+<ul>
+	<li><a href="/T42">Home</a></li>
+	<li><a href=" /T42/about">About</a></li>
+	<li><a href=" /T42/contact/">Contact</a></li>
+</ul>
+            </body>
+            {% endif %}
 {% endblock %}
